mongnew.yaml
# ---------------------- NAMESPACE ----------------------
apiVersion: v1
kind: Namespace
metadata:
  name: mongodbnew

---
# ---------------------- MONGODB DEPLOYMENT ----------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: mongodbnew
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
---
# ---------------------- MONGODB SERVICE ----------------------
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongodbnew
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
# ---------------------- MONGO-EXPRESS DEPLOYMENT ----------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: mongodbnew
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
# ---------------------- MONGO-EXPRESS SERVICE ----------------------
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongodbnew
spec:
  type: LoadBalancer
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081

---
# ---------------------- INGRESS ----------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: mongodbnew
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mongoexpress.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
